--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,213 @@
-.App {
+/* * {
+  margin: 0;
+  padding: 0;
+}
+
+.bg {
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  position: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.bg-overlay {
+  background-color: #0f0f0f99;
+  width: 100%;
+  height: 100%;
+  z-index: -5;
+  position: absolute;
+}
+
+.bg img {
+  width: 100%;
+  background-position: center bottom;
+} */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html {
+  font-family: "Montserrat", sans-serif;
+}
+body {
+  background:  #f9f7f0;
+  padding: 0 16px;
+  background-image: url("https://www.transparenttextures.com/patterns/brick-wall.png");
+ 
+}
+
+header {
+  position:absolute;
+  top: 0;
+  background-color: aqua;
+  margin: auto -16px;
+  padding: 16px 32px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+}
+footer {
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 4.5rem;
+  background-color: aqua;
+}
+header h3 {
+  color: #fff;
+  font-family: "McLaren", cursive;
+  font-weight: 200;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header h1 {
+  color: #fff;
+  font-family: "McLaren", cursive;
+  font-weight: 200;
+}
+.buttons{
+  padding:2%;
+ 
+  margin-top: ;
+}
+* {
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bg {
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  position: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bg-overlay {
+  background-color: #0f0f0f99;
+  width: 100%;
+  height: 100%;
+  z-index: -5;
+  position: absolute;
+}
+
+.bg img {
+  width: 100%;
+  background-position: center bottom;
+}
+
+button {
+  background: none;
+  border: 2px #ffffffcc solid;
+  padding: 16px;
+  width: 130px;
+  /* box-shadow: #000000fa 1px 1px 2px 0; */
+  border-radius: 2%;
+  color: #fff;
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  box-shadow: none;
+  color: #000;
+  background-color: aqua;
+  border: none;
+  width: 140px;
+  padding: 24px;
+  font-size: 17px;
+}
+
+button .active {
+  box-shadow: none;
+  color: #000;
+  background-color: aqua;
+  border: none;
+  width: 140px;
+  padding: 24px;
+  font-size: 17px;
+}
+
+.active {
+  box-shadow: none;
+  color: #000;
+  background-color: #ffffffcc;
+  border: none;
+  width: 140px;
+  padding: 24px;
+  font-size: 17px;
+}
+
+.App {
+  height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.time-menu,
+.player-container,
+.audio-menu {
+  flex: 1;
+  height: 90%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+}
+
+.time-menu {
+  /* background-color: #ffafaf;  */
+}
+
+.player-container {
+  /* background-color: #afafff; */
+  position: relative;
+}
+
+.player-container .play,
+.player-container .audioSeek {
+  position: absolute;
+}
+
+.player-container .timer {
+  position: absolute;
+  bottom: 10%;
+}
+
+.audio-menu {
+  /* background-color: #afffaf;  */
+}
+
+.playPause {
+  width: 40px;
+  z-index: 10;
+}
+
+.audioSeek {
+  width: 60%;
+}
+
+.volume-control {
+  display: flex;
+  position: absolute;
+  bottom: 0%;
+
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 32px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.volume-icon {
+  filter: invert(100%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timer {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 32px;
+  color: white;
 }
